--- a/src/style/style.css
+++ b/src/style/style.css
@@ -44,9 +44,9 @@
  * -------------------------------------------------------------------------- */
 
  :root {
-    --vp-c-brand-1: #5086a1;
-    --vp-c-brand-2: #6aa1b7;
-    --vp-c-brand-3: #8cccd5;
+  --vp-c-brand-1: #ca4b22;
+  --vp-c-brand-2: #bc6063;
+  --vp-c-brand-3: #b34e52;
     --vp-c-brand-soft: #83d0da50;
     --vp-c-bg-alt: #f9f9f9;
 
@@ -173,6 +173,9 @@
   .DocSearch {
     --docsearch-primary-color: var(--vp-c-brand-1) !important;
   }
+  .svelecte {
+    --sv-min-height: 40px;
+  }
 
   .dark .svelecte {
     --sv-min-height: 40px;
@@ -201,8 +204,8 @@
     --sv-dropdown-width: auto;
     --sv-dropdown-shadow: 0 1px 3px #555;
     --sv-dropdown-height: 320px;
-    --sv-dropdown-active-bg: #992b2b;
-    --sv-dropdown-selected-bg: var(--vp-c-brand-1);
+    --sv-dropdown-active-bg: #553d3d;
+    --sv-dropdown-selected-bg: #754545;
     --sv-create-kbd-border: 1px solid #626262;
     --sv-create-kbd-bg: #626262;
     --sv-create-disabled-bg: #fcbaba;
@@ -214,4 +217,43 @@
   }
   .sv-control {
     min-height: 40px;
+  }
+  h1 {
+    margin-top: 16px;
+    margin-bottom: 28px
+  }
+  body {
+    overflow: scroll;
+  }
+
+ .vp-doc {
+    h1 > a {
+      color: inherit;
+      text-decoration: none;
+    }
+    h2 > a,
+    h3 > a,
+    h4 > a,
+    h5 > a,
+    h6 > a {
+      text-decoration: none;
+      color: inherit;
+    }
+ }
+  .toc {
+    .toc-level-1 {
+      font-size: $font-size-3;
+      font-weight: $font-weight-bold;
+    }
+  }
+
+  .dark .light-toggle {
+    display: none;
+  }
+  html:not(.dark) .dark-toggle {
+    display: none;
+  }
+  .nav-footer {
+    display: flex;
+    justify-content: space-between;
   }
